# CMakeLibraryTest

./: CMakeLists.txt
Libs/: CMakeLists.txt
Libs/include/: CMakeLists.txt
Libs/include/Libs/: CMakeLists.txt  Hello.h
Libs/src/: CMakeLists.txt
Libs/src/Libs/: CMakeLists.txt  Hello.cpp
examples/: CMakeLists.txt  Main.cpp
